--- a/team-5-mobile-apps/src/app/pages/friends/friends.page.scss
+++ b/team-5-mobile-apps/src/app/pages/friends/friends.page.scss
@@ -4,9 +4,12 @@
 }
 
 .top-segment {
-  --background: transparent;
+  --background: var(--ion-color-light);
+  background-color: var(--ion-color-light);
   padding: 6px 8px;
-  background: transparent;
+  position: sticky;
+  top: 100px;
+  z-index: 500;
 }
 .top-segment ion-segment-button {
   min-width: 90px;
@@ -16,17 +19,22 @@
   background: #d9c3ff; /* light purple */
 }
 
+.segment-text {
+  font-size: 0.9rem;
+  margin-bottom: 5px;
+}
 .search-wrap {
   padding: 10px 12px;
 }
 .search-wrap ion-searchbar {
   --background: #fff;
-  border-radius: 12px;
+  border-radius: 20px;
 }
 
 .friends-body {
-  background: rgba(245, 235, 250, 0.6); /* very light purple */
   min-height: calc(100vh - 220px);
+  padding-left: 5px;
+  padding-right: 5px;
 }
 .suggestions-label {
   padding: 8px 12px;
