--- a/team-5-mobile-apps/src/app/pages/tabs.page.scss
+++ b/team-5-mobile-apps/src/app/pages/tabs.page.scss
@@ -6,6 +6,7 @@
     height: 65px;
     margin-left: 10px;
     margin-right: 10px;
+    margin-bottom: 5px;
     border-radius: 10px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
